force-app/main/default/objects/OCH_connection_details__mdt/OCH_connection_details__mdt.object-meta.xml
<CustomObject>
    <label>OCH connection details</label>
    <pluralLabel>OCH connections details</pluralLabel>
</CustomObject>