force-app/main/default/objects/OCH_connection_details__mdt/fields/Account_Details_Path__c.field-meta.xml
<CustomField>
    <fullName>Account_Details_Path__c</fullName>
    <label>Account Details Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>