force-app/main/default/objects/OCH_connection_details__mdt/fields/AWS_Password__c.field-meta.xml
<CustomField>
    <fullName>AWS_Password__c</fullName>
    <description>CDCS-184 password used to authenticate on AWS statement generator</description>
    <inlineHelpText>Password used to authenticate on AWS statement generator</inlineHelpText>
    <label>AWS Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>