force-app/main/default/objects/OCH_connection_details__mdt/fields/AWS_STatement_Auth_Path__c.field-meta.xml
<CustomField>
    <fullName>AWS_STatement_Auth_Path__c</fullName>
    <description>CDCS-184 path to user for AWS statement generator request</description>
    <inlineHelpText>Path to user for AWS statement generator request</inlineHelpText>
    <label>AWS STatement Auth Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>