force-app/main/default/objects/OCH_connection_details__mdt/fields/AWS_Statement_Path__c.field-meta.xml
<CustomField>
    <fullName>AWS_Statement_Path__c</fullName>
    <description>CDCS-184 Request path for generating statement</description>
    <label>AWS Statement Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>