force-app/main/default/objects/OCH_connection_details__mdt/fields/AWS_Username__c.field-meta.xml
<CustomField>
    <fullName>AWS_Username__c</fullName>
    <description>CDCS-184 - username used to authenticate on AWS statement generator</description>
    <inlineHelpText>Username used to authenticate on AWS statement generator</inlineHelpText>
    <label>AWS Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>