force-app/main/default/objects/OCH_connection_details__mdt/fields/Balances_Path__c.field-meta.xml
<CustomField>
    <fullName>Balances_Path__c</fullName>
    <label>Balances Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>