force-app/main/default/objects/OCH_connection_details__mdt/fields/Bank_Id__c.field-meta.xml
<CustomField>
    <fullName>Bank_Id__c</fullName>
    <label>Bank Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>