force-app/main/default/objects/OCH_connection_details__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>