force-app/main/default/objects/OCH_connection_details__mdt/fields/Corp_Principal__c.field-meta.xml
<CustomField>
    <fullName>Corp_Principal__c</fullName>
    <label>Corp Principal</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>