force-app/main/default/objects/OCH_connection_details__mdt/fields/Language_Id__c.field-meta.xml
<CustomField>
    <fullName>Language_Id__c</fullName>
    <label>Language Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>