force-app/main/default/objects/OCH_connection_details__mdt/fields/Login_Flag__c.field-meta.xml
<CustomField>
    <fullName>Login_Flag__c</fullName>
    <label>Login Flag</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>