force-app/main/default/objects/OCH_connection_details__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>CDCS-144 - Named credential to use when making requests to OCH api</description>
    <inlineHelpText>Named credential to use when making requests to OCH api</inlineHelpText>
    <label>Named Credential</label>
    <length>20</length>
    <type>Text</type>
</CustomField>