force-app/main/default/objects/OCH_connection_details__mdt/fields/Statement_Inquiry_Path__c.field-meta.xml
<CustomField>
    <fullName>Statement_Inquiry_Path__c</fullName>
    <label>Statement Inquiry Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>